# MT-Server

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yml
musicTrainee/: db-template.sqlite3  db.json  db.sqlite3  db_vAlpha.json  manage.py
musicTrainee/accounts/: admin.py  common.py  models.py  serializers.py
musicTrainee/accounts/migrations/: 0001_initial.py  0002_alter_customaccount_avatar.py  0003_passwordresetrequest.py  0004_customaccount_is_activated.py
musicTrainee/catalog/: admin.py  fields.py  models.py  serializers.py  urls.py  views.py
musicTrainee/catalog/migrations/: 0001_initial.py  0002_course_logo.py  0002_task_user_student.py  0003_course_approval.py  0003_remove_task_file_remove_task_user_student_and_more.py  0004_advuser.py  0004_course_target_description.py  0005_delete_advuser.py  0005_lesson.py  0006_content_lesson.py  0006_file_image_text_video_module_content.py  0007_alter_content_options_alter_module_options_and_more.py  0007_remove_content_module_alter_content_lesson.py  0008_alter_module_course.py  0008_taskreview.py  0009_alter_taskreview_is_correct.py  0009_rename_create_date_course_created_course_creator_and_more.py  0010_alter_course_owner.py  0010_commentcontent.py  0011_rename_autor_commentcontent_author.py  0011_rename_file_file_content_rename_file_image_content_and_more.py  (+9 more)
musicTrainee/database/: db.sqlite3
musicTrainee/musicApi/: apps.py  urls.py  views.py
musicTrainee/musicTrainee/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile  nginx.conf
(+6 files in other folders)
