[tool.poetry]
name = "mt-server"
version = "0.1.0"
description = ""
authors = ["hiiggs <yurasik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
django-rest-framework = "^0.1.0"
pillow = "^10.3.0"
drf-spectacular = "^0.27.2"
python-dotenv = "^1.0.1"
django-dirtyfields = "^1.9.2"
gunicorn = "^22.0.0"
python-slugify = "^8.0.4"
django-cors-headers = "^4.4.0"
sentry-sdk = {extras = ["django"], version = "^2.12.0"}
psycopg2-binary = "^2.9.9"
djangorestframework-simplejwt = "^5.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
